--- a/web/html/index.html
+++ b/web/html/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-
-    <!-- Without this, mobile/responsive styling (like hiding the menu for smaller screens) won’t apply. -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="style.css">
-
-    <title>Robot Control Center</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Robot Control Center</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
 </head>
 
-
 <body>
+  <div class="layout">
 
-    <h1>Robot Control Center</h1>
+    <!-- Mobile Nav Toggle -->
+    <button id="mobile-nav-toggle1">☰</button>
 
-    <!-- Live Camera Feed -->
-    <div class="panel camera-wrapper">
+    <!-- Sidebar Navigation -->
+    <nav id="navmenu1" class="navmenu1 hidden">
+      <ul>
+        <li><a href="#hero1"><i class="bi bi-house navicon1"></i> Home</a></li>
+        <li><a href="#about1"><i class="bi bi-person navicon1"></i> About</a></li>
+        <li><a href="#resume1"><i class="bi bi-file-earmark-text navicon1"></i> Resume</a></li>
+        <li><a href="#portfolio1"><i class="bi bi-images navicon1"></i> Portfolio</a></li>
+        <li><a href="#contact1"><i class="bi bi-envelope navicon1"></i> Contact</a></li>
+        <li><a href="https://janosrostas.co.uk/"><i class="bi bi-cloud-check navicon1"></i> JanosRostas.co.uk</a></li>
+        <li><a href="login.html"><i class="bi bi-box-arrow-in-right navicon1"></i> Login</a></li>
+      </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="main-content">
+      <h1>🤖 Robot Control Center</h1>
+
+      <div class="panel camera-wrapper">
         <h2>Live Camera Feed</h2>
-        <img src="http://192.168.1.189:8082" alt="Live Stream">
-    </div>
+        <img src="http://192.168.1.189:8082" alt="Live Stream" />
+      </div>
 
-    <!-- Movement Control Panel -->
-    <div class="panel">
+      <div class="panel">
         <h2>Robot Movement</h2>
         <div class="movement-controls">
-            <button class="up" onclick="sendCommand('forward')">↑</button>
-            <button class="left" onclick="sendCommand('left')">←</button>
-            <button class="right" onclick="sendCommand('right')">→</button>
-            <button class="down" onclick="sendCommand('backward')">↓</button>
-            <button class="rotate-left" onclick="sendCommand('rotate_left')">⟲ Rotate Left</button>
-            <button class="rotate-right" onclick="sendCommand('rotate_right')">⟳ Rotate Right</button>
+          <button class="up" onclick="sendCommand('forward')">↑</button>
+          <button class="left" onclick="sendCommand('left')">←</button>
+          <button class="right" onclick="sendCommand('right')">→</button>
+          <button class="down" onclick="sendCommand('backward')">↓</button>
+          <button class="rotate-left" onclick="sendCommand('rotate_left')">⟲ Rotate Left</button>
+          <button class="rotate-right" onclick="sendCommand('rotate_right')">⟳ Rotate Right</button>
         </div>
-    </div>
+      </div>
 
-    <!-- LED Control Panel -->
-    <div class="panel led-controls">
+      <div class="panel led-controls">
         <h2>LED Control</h2>
         <button id="led-on" onclick="sendCommand('LEDon')">Turn LED ON</button>
         <button id="led-off" onclick="sendCommand('LEDoff')">Turn LED OFF</button>
         <div id="response" class="response"></div>
-    </div>
+      </div>
+    </main>
+  </div>
 
-    <script src="main.js"></script>
-
+  <script src="main.js"></script>
 </body>
 </html>
