--- a/web/html/index.html
+++ b/web/html/index.html
@@ -19,8 +19,8 @@
       <ul>
         <li><a href="#hero1"><i class="bi bi-house navicon1"></i> Home</a></li>
         <li><a href="#about1"><i class="bi bi-person navicon1"></i> About</a></li>
-        <li><a href="#resume1"><i class="bi bi-file-earmark-text navicon1"></i> Resume</a></li>
-        <li><a href="#portfolio1"><i class="bi bi-images navicon1"></i> Portfolio</a></li>
+        <!-- <li><a href="#resume1"><i class="bi bi-file-earmark-text navicon1"></i> Resume</a></li> -->
+        <!-- <li><a href="#portfolio1"><i class="bi bi-images navicon1"></i> Portfolio</a></li> -->
         <li><a href="#contact1"><i class="bi bi-envelope navicon1"></i> Contact</a></li>
         <li><a href="https://janosrostas.co.uk/"><i class="bi bi-cloud-check navicon1"></i> JanosRostas.co.uk</a></li>
         <li><a href="login.html"><i class="bi bi-box-arrow-in-right navicon1"></i> Login</a></li>
@@ -50,8 +50,10 @@
 
       <div class="panel led-controls">
         <h2>LED Control</h2>
-        <button id="led-on" onclick="sendCommand('LEDon')">Turn LED ON</button>
-        <button id="led-off" onclick="sendCommand('LEDoff')">Turn LED OFF</button>
+        <div class="led-button-group">
+          <button id="led-on" onclick="sendCommand('LEDon')">Turn LED ON</button>
+          <button id="led-off" onclick="sendCommand('LEDoff')">Turn LED OFF</button>
+        </div>
         <div id="response" class="response"></div>
       </div>
     </main>
