UI: added a scroll to top button. Simple and one with progress circle

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -56,6 +56,23 @@
         </div>
         <div id="response" class="response"></div>
       </div>
+
+      <!-- Go To Top Button Simple -->
+      <!--
+      <a href="#" class="go-top d-flex align-items-center justify-content-center">
+        <i class="bi bi-arrow-up-short"></i>
+      </a>
+      -->
+      <!-- Go To Top Button With progress circle -->
+      <a href="#" class="go-top d-flex align-items-center justify-content-center">
+        <svg class="progress-circle" width="48" height="48">
+          <circle cx="24" cy="24" r="20"></circle>
+          <circle cx="24" cy="24" r="20" class="progress"></circle>
+        </svg>
+        <i class="bi bi-arrow-up-short"></i>
+      </a>
+
+
     </main>
   </div>
 
