--- a/web/html/login_modern.html
+++ b/web/html/login_modern.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Robot Control Center</title>
+  <meta name="description" content="Login and register to access exclusive features.">
+  <title>Login and Register</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
+
+  <!-- Lik Font Awesome for <i class="fa fa-sign-in-alt"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -23,38 +28,51 @@
         <!-- <li><a href="#portfolio1"><i class="bi bi-images navicon1"></i> Portfolio</a></li> -->
         <li><a href="#contact1"><i class="bi bi-envelope navicon1"></i> Contact</a></li>
         <li><a href="https://janosrostas.co.uk/"><i class="bi bi-cloud-check navicon1"></i> JanosRostas.co.uk</a></li>
-        <li><a href="login_modern.html"><i class="bi bi-box-arrow-in-right navicon1"></i> Login</a></li>
+        <!-- <li><a href="login_modern.html"><i class="bi bi-box-arrow-in-right navicon1"></i> Login</a></li> -->
       </ul>
     </nav>
 
     <!-- Main Content -->
     <main class="main-content">
-      <h1>🤖 Robot Control Center</h1>
 
-      <div class="panel camera-wrapper">
-        <h2>Live Camera Feed</h2>
-        <img src="http://192.168.1.189:8082" alt="Live Stream" />
-      </div>
 
-      <div class="panel">
-        <h2>Robot Movement</h2>
-        <div class="movement-controls">
-          <button class="up" onclick="sendCommand('forward')">↑</button>
-          <button class="left" onclick="sendCommand('left')">←</button>
-          <button class="right" onclick="sendCommand('right')">→</button>
-          <button class="down" onclick="sendCommand('backward')">↓</button>
-          <button class="rotate-left" onclick="sendCommand('rotate_left')">⟲ Rotate Left</button>
-          <button class="rotate-right" onclick="sendCommand('rotate_right')">⟳ Rotate Right</button>
+      <!-- Login and Register -->
+      <div class="container">
+        <div class="tabs">
+          <button id="loginTab" class="active">Login</button>
+          <button id="registerTab">Register</button>
         </div>
-      </div>
 
-      <div class="panel led-controls">
-        <h2>LED Control</h2>
-        <div class="led-button-group">
-          <button id="led-on" onclick="sendCommand('LEDon')">Turn LED ON</button>
-          <button id="led-off" onclick="sendCommand('LEDoff')">Turn LED OFF</button>
-        </div>
-        <div id="response" class="response"></div>
+        <!-- Login Form -->
+        <form id="loginForm" class="form active">
+            <!-- <input type="email" placeholder="Email" required value="rostas881122@gmail.com"/> -->
+            <input type="email" placeholder="Email" required />
+            <input type="password" placeholder="Password" required />
+            <button type="submit" class="btn"><i class="fa fa-sign-in-alt"></i> Login</button>
+            <p class="or">Or continue with</p>
+          <div class="socials">
+            <button class="social">G</button>
+            <button class="social">f</button>
+            <button class="social">t</button>
+          </div>
+        </form>
+
+
+
+        <!-- Register Form -->
+        <form id="registerForm" class="form">
+          <input type="text" placeholder="Full Name" required />
+          <input type="email" placeholder="Email" required />
+          <input type="password" placeholder="Password" required />
+          <input type="password" placeholder="Confirm Password" required />
+          <button type="submit" class="btn"><i class="fa fa-user-plus"></i> Register</button>
+          <p class="or">Or sign up with</p>
+          <div class="socials">
+            <button class="social">G</button>
+            <button class="social">f</button>
+            <button class="social">t</button>
+          </div>
+        </form>
       </div>
 
 
