test iframe to embed camera stream

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -33,7 +33,8 @@
 
       <div class="panel camera-wrapper">
         <h2>Live Camera Feed</h2>
-        <img src="http://192.168.1.189:8082" alt="Live Stream" />
+        <!-- <img src="http://192.168.1.189:8082" alt="Live Stream" /> -->
+        <iframe src="http://192.168.1.189:8082" width="640" height="480" frameborder="0"></iframe>
       </div>
 
       <div class="panel">
