camera feed in iframe

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -32,9 +32,9 @@
       <h1>🤖 Robot Control Center</h1>
 
       <div class="panel camera-wrapper">
-        <h2>Live Camera Feed</h2>
+        <!-- <h2>Live Camera Feed</h2> -->
         <!-- <img src="http://192.168.1.189:8082" alt="Live Stream" /> -->
-        <iframe src="http://192.168.1.189:8082" width="640" height="480" frameborder="0"></iframe>
+        <iframe src="http://192.168.1.189:8083" frameborder="0"></iframe>
       </div>
 
       <div class="panel">
