added some effects, fadein

--- a/web/html/contact_page.html
+++ b/web/html/contact_page.html
@@ -18,13 +18,15 @@
     <nav id="navmenu1" class="navmenu1 hidden">
       <ul>
         <li><a href="index.html"><i class="bi bi-house navicon1"></i> Home</a></li>
-        <li><a href="#about1"><i class="bi bi-person navicon1"></i> About</a></li>
+        <li><a href="https://www.linkedin.com/in/janos-rostas/" target="_blank" rel="noopener noreferrer"><i class="bi bi-person navicon1"></i> About</a></li>
         <!-- <li><a href="#resume1"><i class="bi bi-file-earmark-text navicon1"></i> Resume</a></li> -->
         <!-- <li><a href="#portfolio1"><i class="bi bi-images navicon1"></i> Portfolio</a></li> -->
         <li><a href="contact_page.html"><i class="bi bi-envelope navicon1"></i> Contact</a></li>
-        <li><a href="https://janosrostas.co.uk/"><i class="bi bi-cloud-check navicon1"></i> JanosRostas.co.uk</a></li>
+        <li><a href="https://janosrostas.co.uk/" target="_blank"><i class="bi bi-cloud-check navicon1"></i> JanosRostas.co.uk</a></li>
         <li><a href="login_modern.html"><i class="bi bi-box-arrow-in-right navicon1"></i> Login</a></li>
       </ul>
+
+
     </nav>
 
     <!-- Main Content -->
@@ -44,7 +46,7 @@
             <div class="contact-details">
 
               <!-- Address -->
-              <div class="info-box">
+              <div class="info-box fade-in-10">
                 <i class="bi bi-geo-alt"></i>
                 <div>
                   <h3>Location</h3>
@@ -53,7 +55,7 @@
               </div>
 
               <!-- Phone Box -->
-              <div class="info-box">
+              <div class="info-box fade-in-15">
                 <i class="bi bi-phone"></i>
                 <div>
                   <h3>Phone</h3>
@@ -62,7 +64,7 @@
               </div>
 
               <!-- Email Box -->
-              <div class="info-box">
+              <div class="info-box fade-in-20">
                 <i class="bi bi-envelope"></i>
                 <div>
                   <h3>Email</h3>
@@ -71,7 +73,7 @@
               </div>
 
               <!-- Social Media -->
-              <div class="info-box">
+              <div class="info-box fade-in-25">
                 <div>
                   <h3>Social Media</h3>
                   <p><a href="https://www.linkedin.com/in/janos-rostas/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i> LinkedIn</a></p>
@@ -82,7 +84,7 @@
             </div>
 
             <!-- Google Map -->
-            <div class="contact-map">
+            <div class="contact-map fade-in-r">
 
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35672.74859886945!2d0.8568454584907657!3d51.153066550878904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dec322dc36f387%3A0x280d4f34618ec61e!2sAshford!5e0!3m2!1sen!2suk!4v1723984497178!5m2!1sen!2suk"
