--- a/web/html/index.html
+++ b/web/html/index.html
@@ -18,11 +18,11 @@
     <nav id="navmenu1" class="navmenu1 hidden">
       <ul>
         <li><a href="index.html"><i class="bi bi-house navicon1"></i> Home</a></li>
-        <li><a href="#about1"><i class="bi bi-person navicon1"></i> About</a></li>
+        <li><a href="https://www.linkedin.com/in/janos-rostas/" target="_blank" rel="noopener noreferrer"><i class="bi bi-person navicon1"></i> About</a></li>
         <!-- <li><a href="#resume1"><i class="bi bi-file-earmark-text navicon1"></i> Resume</a></li> -->
         <!-- <li><a href="#portfolio1"><i class="bi bi-images navicon1"></i> Portfolio</a></li> -->
         <li><a href="contact_page.html"><i class="bi bi-envelope navicon1"></i> Contact</a></li>
-        <li><a href="https://janosrostas.co.uk/"><i class="bi bi-cloud-check navicon1"></i> JanosRostas.co.uk</a></li>
+        <li><a href="https://janosrostas.co.uk/" target="_blank"><i class="bi bi-cloud-check navicon1"></i> JanosRostas.co.uk</a></li>
         <li><a href="login_modern.html"><i class="bi bi-box-arrow-in-right navicon1"></i> Login</a></li>
       </ul>
     </nav>
