--- a/web/html/contact_page.html
+++ b/web/html/contact_page.html
@@ -59,7 +59,7 @@
                 <i class="bi bi-phone"></i>
                 <div>
                   <h3>Phone</h3>
-                  <p><a href="tel:+447840067781"> 07840 067781</a></p>
+                  <p><a href="tel:+447840067781"> +44 7840 067781</a></p>
                 </div>
               </div>
 
