added some useful git commands

--- a/web/html/contact_page.html
+++ b/web/html/contact_page.html
@@ -33,7 +33,7 @@
     <main class="main-content">
 
 
-
+      <!-- Contact - reach out section -->
       <section id="reach-out" class="reach-out">
         <div class="reach-out-container">
           <h2>Get in Touch</h2>
